--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <div class="col-lg-3 ml-auto">
                 <div class="mb-5">
                   <h3 class="d-flex align-items-center"><span class="icon icon-electrical mr-2"></span><span>Lighting Design</span></h3>
-                  <p>We are the pioneers in the field of lighting design, we design optimum lighting with energy efficient solutions.</p>
+                  <p>We are the pioneers in the field of lighting design, we design optimum lighting with energy efficient solutions..</p>
                   <!-- <p><a href="#">Read More</a></p> -->
                 </div>
 
